--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,10 @@
+html {box-sizing: border-box;}
+*, *:before, *:after {box-sizing: inherit;}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: #FAFDFD;
+  height: 100%;
 }
