--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,3 +8,9 @@ body {
   background-color: #FAFDFD;
   height: 100%;
 }
+
+.drawerToggleButton {
+  width: 100%;
+  margin-top: 10px;
+  background-color: #0B3954 !important;
+}
