added a review section to the homepage, and removed the spin buttons from the number inputs

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,3 +14,11 @@ body {
   margin-top: 10px;
   background-color: #0B3954 !important;
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
