--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,8 +5,12 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: #FAFDFD;
+  background-color: rgb(221,221,221);
   height: 100%;
+}
+
+#root {
+  overflow-x: hidden;
 }
 
 .drawerToggleButton {
