--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,3 +26,8 @@ input[type=number]::-webkit-outer-spin-button {
     appearance: none;
     margin: 0; 
 }
+
+.reviewContainer {
+  padding: 100px 40px;
+  background: rgba(0,0,0,0.3), url(https://upload.wikimedia.org/wikipedia/commons/3/3d/Jumbo_Floating_Restaurant_-_Outside.jpg);
+}
